flask_app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
spec:

  tls:
  - hosts:
    - test.rpy3.com
    secretName: secret/custom-tls-certs
  rules:
  - host: test.rpy3.com
    http:
      paths:
      - backend:
          serviceName: flask
          servicePort: 5000
        path: /api
